perf: build a token's range without a CursorRange and index expected sources without IdentityHashMap
#276 round 2. Case 32 established that the super-linearity is GC: allocation per
parse is proportional to the input and so is the live set, so GC work is their
product. This attacks the first factor with the two allocators a heap histogram
and an allocation profile at complex-x64 put at the top.

A StringSource built a CursorRange, two cursors and their index objects on every
construction, and a parse creates 1.23 M sub-sources for a 20 KB input — most of
them peeks that never read a range. Making it lazy alone changes nothing because
Token's constructor calls cursorRange().toRange() for every token. A cursor's
position() is its position in its own source, and StringSource always places its
cursors at offsetFromRoot with the cursors' own offsetFromRoot set to the same
value, so that pair is always [0, codePointLength). Source.sourceRange() answers
it directly (the default implementation still goes through cursorRange()), and
the equivalence was checked with a temporary build that computed both and threw
on a mismatch: 694 + 1,009 tests and real complex / complex-x64 parses (888k
tokens) reported none.

ExpectedSources kept two IdentityHashMap-backed sets to de-duplicate the parsers
expected at a failure frontier; their tables were 13% of a parse's allocation,
because an IdentityHashMap holds key and value in adjacent slots and resizes as
the set grows. Entries now live in a Parser[] plus a boolean[], de-duplication
below 16 entries is an identity scan of that array, and above it an open
addressed int[] index at load factor 1/2. Merging into an empty frame — the
dominant case, since mergeFrame clears before copying a child that reached
further — is an arraycopy with no de-duplication at all. This is the shape the
Rust runtime already had (Vec<u32> of interned ids with a linear contains).

Allocation per parse falls 27% at all four sizes (22.96 -> 16.68 MB at complex,
